# python3-cyberfusion-proftpd-support

./: .env.local  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.run/: Template Python tests.run.xml
debian/: changelog  control  install  python3-cyberfusion-proftpd-support.cron.d  python3-cyberfusion-proftpd-support.pydist  rules
etc/: proftpd-support.conf
etc/cronscripts/: proftpd-delete-expired-users.cron
requirements/: test.txt
src/cyberfusion/ProftpdSupport/: settings.py
tests/: conftest.py
tests/feature_tests/: test_database.py  test_users.py
var/lib/: proftpd.db
