[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-proftpd-support"
version = "1.0"
description = "Library to manage ProFTPD."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "pydantic[dotenv]==1.10.4",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-proftpd-support"

[project.scripts]
proftpd-support-delete-expired-users = "cyberfusion.ProftpdSupport.users:delete_expire_users"
